# model-garden

./: .gitignore  Makefile  README.md
.github/workflows/: build-images.yml
seedlings/anomaly_detection/: Makefile  README.md  pyproject.toml
seedlings/anomaly_detection/notebooks/: 001_anomaly_detection.ipynb
seedlings/boosting_comparison/: Makefile  README.md  pyproject.toml
seedlings/boosting_comparison/notebooks/: 001_boosting_comparison.ipynb
seedlings/classification_catboost/: Makefile  README.md  pyproject.toml
seedlings/classification_catboost/notebooks/: 001_classification_catboost.ipynb
seedlings/clustering_comparison/: Makefile  README.md  pyproject.toml
seedlings/clustering_comparison/notebooks/: 001_clustering_comparison.ipynb
seedlings/feature_engineering/: Dockerfile  Makefile  README.md  pyproject.toml
seedlings/feature_engineering/notebooks/: 001_feature_engineering_selection.ipynb
seedlings/finetuning_unsloth/: Makefile  README.md  pyproject.toml
seedlings/finetuning_unsloth/notebooks/: 001_finetuning_unsloth.ipynb
seedlings/imbalanced_classification/: Makefile  README.md  pyproject.toml
seedlings/imbalanced_classification/notebooks/: 001_imbalanced_classification.ipynb
seedlings/regression_catboost/: Dockerfile  Makefile  README.md  pyproject.toml
seedlings/regression_catboost/notebooks/: 001_regression_catboost.ipynb
seedlings/sklearn_comparison/: Makefile  README.md  pyproject.toml
seedlings/sklearn_comparison/notebooks/: 001_sklearn_comparison.ipynb
seedlings/text_classification/: Makefile  README.md  pyproject.toml
seedlings/text_classification/notebooks/: 001_text_classification.ipynb
seedlings/time_series_forecasting/: Makefile  README.md  pyproject.toml
seedlings/time_series_forecasting/notebooks/: 001_time_series_forecasting.ipynb
