[project]
name = "classification-catboost"
version = "0.1.0"
description = "CatBoost classification seedling for model-garden"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "shap>=0.45",
    "papermill>=2.6",
    "nbconvert>=7.14",
    "pyarrow>=15.0",
    "gcsfs>=2024.2",
    "ipykernel>=6.29",
]
