[project]
name = "sklearn-comparison"
version = "0.1.0"
description = "XGBoost vs Random Forest vs Logistic Regression vs HistGradientBoosting comparison seedling"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "optuna>=3.6",
    "matplotlib>=3.8",
    "shap>=0.45",
    "scipy>=1.12",
    "papermill>=2.6",
    "nbconvert>=7.14",
    "pyarrow>=15.0",
    "gcsfs>=2024.2",
    "ipykernel>=6.29",
]
